phase2_Dev/src/objects/EEC_HistoricalVisitSubItemStaging__c.object
<CustomObject>
    <description>Staging object used to load historic Visit Sub Item Data into target object &apos;visit Items. Observations&apos;</description>
    <fields>
        <fullName>EEC_DisplayText__c</fullName>
        <label>DisplayText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Display_Text_SubItemVal__c</fullName>
        <formula>EEC_DisplayText__c + &apos; = &apos; +  EEC_SubItemVal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Text + SubItemVal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_HeaderVisitItem__c</fullName>
        <formula>EEC_VisitHeaderId__c + &apos;|&apos; + EEC_Hostname__c + &apos;|&apos; + EEC_VisitDetailId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderVisitItem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Hostname__c</fullName>
        <label>Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_New_Hostname__c</fullName>
        <label>New Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_SubItemVal__c</fullName>
        <label>SubItemVal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitDetailId__c</fullName>
        <label>VisitDetailId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitHeaderId__c</fullName>
        <label>VisitHeaderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitSubItemId__c</fullName>
        <label>VisitSubItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Visit_SubItem_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit SubItem Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoricalVisitItemStaging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HistoricalVisitItemStaging</label>
        <referenceTo>EEC_HistoricalVisitItemStaging__c</referenceTo>
        <relationshipName>HistoricalVisitItemDetailStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HistoricalVisitISubItemStaging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EEC_HeaderVisitItem__c</columns>
        <columns>EEC_VisitSubItemId__c</columns>
        <columns>EEC_Visit_SubItem_Processed__c</columns>
        <columns>EEC_Display_Text_SubItemVal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LVSI-{0000}</displayFormat>
        <label>VisitSubItemStagingId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HistoricalVisitSubItemStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>